generate final document, readthedocs can't run the compilation of java program so we have to commit generated rst source doc..